skan_tests/error/failedIf2.sk
int main(){
    int x=1;
    if (x!=50) x = 50; /* needs an else */
    return 0;
}